--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "version": 2,
-  "buildCommand": "cd client && pnpm install && pnpm build",
-  "outputDirectory": "client/dist",
+  "buildCommand": "pnpm install && pnpm build",
+  "outputDirectory": "dist/public",
   "framework": "vite",
   "rewrites": [
     {
